# RaceProject

./: CMakeLists.txt  README.md  RaceProjectv1  auto.sh  benchmark.txt  client.sh  race-hi  server.sh
resultats/: resultat_1.txt  resultat_10.txt  resultat_11.txt  resultat_12.txt  resultat_13.txt  resultat_14.txt  resultat_15.txt  resultat_16.txt  resultat_17.txt  resultat_18.txt  resultat_19.txt  resultat_2.txt  resultat_20.txt  resultat_21.txt  resultat_22.txt  resultat_23.txt  resultat_24.txt  resultat_25.txt  resultat_26.txt  resultat_3.txt  resultat_4.txt  resultat_5.txt  resultat_6.txt  resultat_7.txt  resultat_8.txt  resultat_9.txt
src/: Binome.txt  main.c
src/game_area/: game_area.c  game_area.h
src/game_instance/: game_instance.c  game_instance.h
src/player/: player.c  player.h
src/vector/: vector.c  vector.h
